fixed language string typo (cherry picked from commit 5a3430a6e726e3b10807b7133ec3894340e00658) Thanks to @WanWizard

--- a/po/ar.po
+++ b/po/ar.po
@@ -3122,8 +3122,8 @@ msgstr "استمرار العرض"
 msgid "Continue playing"
 msgstr "استمرار العرض"
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "مواصلة التشغيل (حلقة)"
 
 msgid "Contrast"
 msgstr "تباين"
