--- a/po/bg.po
+++ b/po/bg.po
@@ -2857,8 +2857,8 @@ msgstr ""
 msgid "Continue playing"
 msgstr "Продължи възпроизвеждането"
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Непрекъснато възпроизвеждане (loop)"
 
 msgid "Contrast"
 msgstr "Контраст"
