--- a/po/ca.po
+++ b/po/ca.po
@@ -3178,8 +3178,8 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Continua la reproducció (bucle)"
 
 #
 msgid "Contrast"
