--- a/po/cs.po
+++ b/po/cs.po
@@ -3291,8 +3291,8 @@ msgstr "Pokračovat v přehrávání"
 msgid "Continue playing"
 msgstr "pokračovat v přehrávání"
 
-msgid "Continues play (loop)"
-msgstr "přehrát další (opakování ve smyčce)"
+msgid "Continuous play (loop)"
+msgstr "Přehrát další (opakování ve smyčce)"
 
 #
 msgid "Contrast"
