--- a/po/da.po
+++ b/po/da.po
@@ -3287,8 +3287,8 @@ msgstr "Fortsæt afspilning"
 msgid "Continue playing"
 msgstr "Fortsæt afspilning"
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Fortsat afspilning (løkke)"
 
 #
 msgid "Contrast"
