--- a/po/de.po
+++ b/po/de.po
@@ -2777,7 +2777,7 @@ msgstr "Abspielen fortsetzen"
 msgid "Continue playing"
 msgstr "Abspielen fortsetzen"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Endloswiedergabe (Schleife)"
 
 msgid "Contrast"
