--- a/po/el.po
+++ b/po/el.po
@@ -2919,7 +2919,7 @@ msgstr "Συνέχιση αναπαραγωγής"
 msgid "Continue playing"
 msgstr "Συνέχιση αναπαραγωγής"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Συνέχιση αναπαραγωγής (επανάληψη)"
 
 msgid "Contrast"
