--- a/po/en.po
+++ b/po/en.po
@@ -2700,8 +2700,8 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Continuous play (loop)"
 
 msgid "Contrast"
 msgstr ""
