--- a/po/es.po
+++ b/po/es.po
@@ -3305,8 +3305,8 @@ msgstr "Reproducción contínua"
 msgid "Continue playing"
 msgstr "Reproducción contínua"
 
-msgid "Continues play (loop)"
-msgstr "Continúa la reproducción (blucle)"
+msgid "Continuous play (loop)"
+msgstr "Reproducir DVD"
 
 #
 msgid "Contrast"
