--- a/po/et.po
+++ b/po/et.po
@@ -2921,7 +2921,7 @@ msgstr "Jätka taasesitust"
 msgid "Continue playing"
 msgstr "Jätka taasesitust"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Lõputu esitus (loop)"
 
 msgid "Contrast"
