--- a/po/fr.po
+++ b/po/fr.po
@@ -2840,8 +2840,8 @@ msgstr "Lecture continue"
 msgid "Continue playing"
 msgstr "Lecture continue"
 
-msgid "Continues play (loop)"
-msgstr "Continue la lecture (boucle)"
+msgid "Continuous play (loop)"
+msgstr "Lecture en boucle"
 
 msgid "Contrast"
 msgstr "Contraste"
