--- a/po/hr.po
+++ b/po/hr.po
@@ -3191,8 +3191,8 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Nastavlja se reprodukcija (petlja)"
 
 #
 msgid "Contrast"
