--- a/po/it.po
+++ b/po/it.po
@@ -3135,7 +3135,7 @@ msgstr "Proseguire la riproduzione"
 msgid "Continue playing"
 msgstr "Proseguire la riproduzione"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Riproduzione continua (loop)"
 
 #
