--- a/po/lt.po
+++ b/po/lt.po
@@ -2942,8 +2942,8 @@ msgstr "Tęsti žiūrėjimą"
 msgid "Continue playing"
 msgstr "Tęsti žiūrėjimą"
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "Ištisinis kartojimas ratu (kilpa)"
 
 msgid "Contrast"
 msgstr "Kontrastas"
