--- a/po/pt.po
+++ b/po/pt.po
@@ -3307,7 +3307,7 @@ msgstr "Continuar reprodução"
 msgid "Continue playing"
 msgstr "Continuar reprodução"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Repetir reprodução"
 
 #
