--- a/po/sk.po
+++ b/po/sk.po
@@ -2794,7 +2794,7 @@ msgstr "Pokračovať v prehaávaní"
 msgid "Continue playing"
 msgstr "Pokračovať v prehrávaní"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Časová slučka (loop)"
 
 msgid "Contrast"
