--- a/po/tr.po
+++ b/po/tr.po
@@ -2770,7 +2770,7 @@ msgstr "Oynatmaya devam"
 msgid "Continue playing"
 msgstr "Oynatmaya devam et"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Sürekli oynat (döngü)"
 
 msgid "Contrast"
