--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2694,8 +2694,8 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
-msgstr ""
+msgid "Continuous play (loop)"
+msgstr "继续播放(重复)"
 
 msgid "Contrast"
 msgstr ""
