--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2688,7 +2688,7 @@ msgstr ""
 msgid "Continue playing"
 msgstr ""
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr ""
 
 msgid "Contrast"
