--- a/po/fi.po
+++ b/po/fi.po
@@ -3241,8 +3241,8 @@ msgstr "Jatka toistoa"
 msgid "Continue playing"
 msgstr "Jatka toistoa"
 
-msgid "Continues play (loop)"
-msgstr "Jatkuva toisto (loop)"
+msgid "Continuous play (loop)"
+msgstr "Jatkuva toisto (silmukka)"
 
 #
 msgid "Contrast"
