--- a/po/fy.po
+++ b/po/fy.po
@@ -3258,7 +3258,7 @@ msgstr "Kontinu spielje"
 msgid "Continue playing"
 msgstr "Kontinu spielje"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr ""
 
 #
