--- a/po/gl.po
+++ b/po/gl.po
@@ -3139,7 +3139,7 @@ msgstr "Reprodución contínua"
 msgid "Continue playing"
 msgstr "Contínuar a reprodución"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Continúa a reprodución (en blucle)"
 
 #
