--- a/po/hu.po
+++ b/po/hu.po
@@ -2923,7 +2923,7 @@ msgstr "Lejátszás folytatása"
 msgid "Continue playing"
 msgstr "Lejátszás folytatása"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Ismétléses lejátszás"
 
 msgid "Contrast"
