--- a/po/id.po
+++ b/po/id.po
@@ -2890,7 +2890,7 @@ msgstr "Lanjut mainkan"
 msgid "Continue playing"
 msgstr "Lanjut mainkan"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Putar terus (loop)"
 
 msgid "Contrast"
