--- a/po/mk.po
+++ b/po/mk.po
@@ -2834,7 +2834,7 @@ msgstr "Продолжи со репродукција"
 msgid "Continue playing"
 msgstr "Продолжи со репродукција"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Континуирана репродукција (јамка)"
 
 msgid "Contrast"
