--- a/po/nl.po
+++ b/po/nl.po
@@ -3095,7 +3095,7 @@ msgstr "Doorlopend afspelen"
 msgid "Continue playing"
 msgstr "Afspelen voortzetten"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Continu afspelen (lus)"
 
 msgid "Contrast"
