--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -2908,7 +2908,7 @@ msgstr "Reprodução contínua"
 msgid "Continue playing"
 msgstr "Continuar reproduzindo"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Reprodução contínua (loop)"
 
 msgid "Contrast"
