--- a/po/ru.po
+++ b/po/ru.po
@@ -2936,8 +2936,8 @@ msgstr "Продолжить воспроизведение"
 msgid "Continue playing"
 msgstr "Продолжить воспроизведение"
 
-msgid "Continues play (loop)"
-msgstr "Продолжить воспр. (цикл)"
+msgid "Continuous play (loop)"
+msgstr "Продолжает воспроизведение(петля)"
 
 msgid "Contrast"
 msgstr "Контрастность"
