--- a/po/sl.po
+++ b/po/sl.po
@@ -3328,7 +3328,7 @@ msgstr "Nadaljevanje predvajanja"
 msgid "Continue playing"
 msgstr "Nadaljuj predvajanje"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr "Nadaljevanje predvajanja (zanka)"
 
 #
