--- a/po/th.po
+++ b/po/th.po
@@ -2933,7 +2933,7 @@ msgstr "เล่นต่อเนื่อง"
 msgid "Continue playing"
 msgstr "เล่นต่อเนื่อง"
 
-msgid "Continues play (loop)"
+msgid "Continuous play (loop)"
 msgstr ""
 
 msgid "Contrast"
