--- a/po/uk.po
+++ b/po/uk.po
@@ -2945,8 +2945,8 @@ msgstr "Продовжити відтворення"
 msgid "Continue playing"
 msgstr "Продовжити відтворення"
 
-msgid "Continues play (loop)"
-msgstr "Продовжити відтв. (цикл)"
+msgid "Continuous play (loop)"
+msgstr "Безперервне відтворення (петля)"
 
 msgid "Contrast"
 msgstr "Контрастність"
